--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,13 @@ scikit-learn==1.2.0
 python-dotenv==1.0.0
 loguru==0.7.0
 
+# Enhanced Preservation Features
+geopy==2.3.0
+requests==2.31.0
+pytz==2023.3
+beautifulsoup4==4.12.2
+lxml==4.9.3
+
 # Development
 pytest==7.3.0
 black==23.3.0
